WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
189913
Tighten up stylesheet loading
https://bugs.webkit.org/show_bug.cgi?id=189913
Summary
Tighten up stylesheet loading
Anne van Kesteren
Reported
2018-09-24 06:39:32 PDT
https://github.com/web-platform-tests/wpt/pull/13144
adds various tests for stylesheet loading suggesting Safari could be a little stricter there (as Firefox is).
Attachments
Patch
(19.83 KB, patch)
2020-01-04 05:05 PST
,
Rob Buis
no flags
Details
Formatted Diff
Diff
Patch
(21.31 KB, patch)
2020-01-04 07:33 PST
,
Rob Buis
no flags
Details
Formatted Diff
Diff
Patch
(9.20 KB, patch)
2020-01-05 06:57 PST
,
Rob Buis
no flags
Details
Formatted Diff
Diff
Patch
(19.75 KB, patch)
2020-01-06 03:50 PST
,
Rob Buis
no flags
Details
Formatted Diff
Diff
Patch
(4.28 KB, patch)
2020-02-03 06:40 PST
,
Rob Buis
no flags
Details
Formatted Diff
Diff
Patch
(5.42 KB, patch)
2020-02-03 07:42 PST
,
Rob Buis
no flags
Details
Formatted Diff
Diff
Patch
(15.62 KB, patch)
2020-02-04 01:40 PST
,
Rob Buis
no flags
Details
Formatted Diff
Diff
Show Obsolete
(6)
View All
Add attachment
proposed patch, testcase, etc.
Rob Buis
Comment 1
2020-01-04 05:05:16 PST
Created
attachment 386761
[details]
Patch
Rob Buis
Comment 2
2020-01-04 07:33:05 PST
Created
attachment 386764
[details]
Patch
Rob Buis
Comment 3
2020-01-05 06:57:23 PST
Created
attachment 386787
[details]
Patch
Rob Buis
Comment 4
2020-01-05 08:43:09 PST
***
Bug 205499
has been marked as a duplicate of this bug. ***
WebKit Commit Bot
Comment 5
2020-01-05 11:18:22 PST
Comment on
attachment 386787
[details]
Patch Clearing flags on attachment: 386787 Committed
r254043
: <
https://trac.webkit.org/changeset/254043
>
WebKit Commit Bot
Comment 6
2020-01-05 11:18:24 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 7
2020-01-05 11:19:16 PST
<
rdar://problem/58326581
>
Rob Buis
Comment 8
2020-01-06 03:50:48 PST
Reopening to attach new patch.
Rob Buis
Comment 9
2020-01-06 03:50:51 PST
Created
attachment 386829
[details]
Patch
Jonathan Bedard
Comment 10
2020-01-06 11:09:22 PST
Pretty sure this is a regression on windows:
https://results.webkit.org/?suite=layout-tests&suite=layout-tests&test=svg%2Fcustom%2Fuse-font-face-crash.svg&test=http%2Ftests%2Fworkers%2Fservice%2Fservice-worker-user-timing.https.html
Rob Buis
Comment 11
2020-01-06 11:27:21 PST
(In reply to Jonathan Bedard from
comment #10
)
> Pretty sure this is a regression on windows: > >
https://results.webkit.org/?suite=layout-tests&suite=layout
- > tests&test=svg%2Fcustom%2Fuse-font-face-crash. > svg&test=http%2Ftests%2Fworkers%2Fservice%2Fservice-worker-user-timing.https. > html
Isn't it behaving the same on "Win10 wk1 Release" before, i.e. expected FAIL and indeed FAILing? Win10 wk1 Debug seems to have no results since the earlier 254036. WPE does seem to have some issues.
Jonathan Bedard
Comment 12
2020-01-06 14:10:14 PST
(In reply to Rob Buis from
comment #11
)
> (In reply to Jonathan Bedard from
comment #10
) > > Pretty sure this is a regression on windows: > > > >
https://results.webkit.org/?suite=layout-tests&suite=layout
- > > tests&test=svg%2Fcustom%2Fuse-font-face-crash. > > svg&test=http%2Ftests%2Fworkers%2Fservice%2Fservice-worker-user-timing.https. > > html > > Isn't it behaving the same on "Win10 wk1 Release" before, i.e. expected FAIL > and indeed FAILing? > Win10 wk1 Debug seems to have no results since the earlier 254036. > WPE does seem to have some issues.
I was looking into a couple different regressions and gave you the wrong link.
https://results.webkit.org/?suite=layout-tests&test=css1%2Fbox_properties%2Fpadding_left.html
is probably more helpful and indicative of the regression.
Rob Buis
Comment 13
2020-01-06 22:49:46 PST
(In reply to Jonathan Bedard from
comment #12
)
> (In reply to Rob Buis from
comment #11
) > > (In reply to Jonathan Bedard from
comment #10
) > > > Pretty sure this is a regression on windows: > > > > > >
https://results.webkit.org/?suite=layout-tests&suite=layout
- > > > tests&test=svg%2Fcustom%2Fuse-font-face-crash. > > > svg&test=http%2Ftests%2Fworkers%2Fservice%2Fservice-worker-user-timing.https. > > > html > > > > Isn't it behaving the same on "Win10 wk1 Release" before, i.e. expected FAIL > > and indeed FAILing? > > Win10 wk1 Debug seems to have no results since the earlier 254036. > > WPE does seem to have some issues. > > I was looking into a couple different regressions and gave you the wrong > link. > >
https://results.webkit.org/?suite=layout
- > tests&test=css1%2Fbox_properties%2Fpadding_left.html is probably more > helpful and indicative of the regression.
The problem is likely
https://bugs.webkit.org/show_bug.cgi?id=205762
:
https://results.webkit.org/commit?branch=trunk&uuid=157825219300
It updates padding_left.html expected results and others in css1/box_properties but only for platform/mac.
Antti Koivisto
Comment 14
2020-01-07 00:30:56 PST
Right, I think this can be relanded.
Rob Buis
Comment 15
2020-02-03 06:40:08 PST
Created
attachment 389503
[details]
Patch
Rob Buis
Comment 16
2020-02-03 07:42:19 PST
Created
attachment 389507
[details]
Patch
Rob Buis
Comment 17
2020-02-04 01:40:50 PST
Created
attachment 389638
[details]
Patch
Rob Buis
Comment 18
2020-02-04 04:27:33 PST
Comment on
attachment 389638
[details]
Patch Note that Firefox has this behavior and I have a patch to implement the behavior in chromium here:
https://chromium-review.googlesource.com/c/chromium/src/+/1986794
WebKit Commit Bot
Comment 19
2020-02-04 13:42:12 PST
Comment on
attachment 389638
[details]
Patch Clearing flags on attachment: 389638 Committed
r255693
: <
https://trac.webkit.org/changeset/255693
>
WebKit Commit Bot
Comment 20
2020-02-04 13:42:14 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug