Tighten up stylesheet loading https://bugs.webkit.org/show_bug.cgi?id=189913

Patch by Rob Buis <rbuis@igalia.com> on 2020-01-05
Reviewed by Antti Koivisto.

LayoutTests/imported/w3c:

Update improved test result.

* web-platform-tests/html/semantics/document-metadata/the-link-element/link-load-error-events.https-expected.txt:

Source/WebCore:

When fetching and processing a linked resource [1], step 11.3 states
that fetch failure should result in a network error. This patch
implements that for stylesheets.

The behavior matches Chrome and Firefox.

[1] https://html.spec.whatwg.org/multipage/semantics.html#default-fetch-and-process-the-linked-resource

Test: imported/w3c/web-platform-tests/html/semantics/document-metadata/the-link-element/link-load-error-events.https.html

* css/StyleRuleImport.cpp:
(WebCore::StyleRuleImport::requestStyleSheet):
* css/StyleSheetContents.h:
* html/HTMLLinkElement.cpp:
(WebCore::HTMLLinkElement::process):

LayoutTests:

Adjust test to new behavior.

* http/tests/security/mixedContent/insecure-stylesheet-redirects-to-basic-auth-secure-stylesheet-expected.txt:
* http/tests/security/mixedContent/resources/frame-with-insecure-stylesheet-redirects-to-basic-auth-secure-stylesheet.html:

Canonical link: https://commits.webkit.org/218918@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@254043 268f45cc-cd09-0410-ab3c-d52691b4dbfc